add login logout